--- a/web-app/css/styles.css
+++ b/web-app/css/styles.css
@@ -100,9 +100,16 @@ footer {
 
 /* General HTML */
 
-h2 {
+h1 {
     color: #7799bb;
+    font-size: 2em;
+}
+
+h2 {
+    /* color: #7799bb; */
     /* color: #bbbbaa; */
+    color: #000000;
+    font-size: 1.3em;
 }
 
 h3 {
