Updated and added styles to support the accessibility modifications; ticket MMT-8.

--- a/web-app/css/styles.css
+++ b/web-app/css/styles.css
@@ -4,6 +4,26 @@ body {
 
 /* Bootstrap Overrides */
 
+.btn {
+    text-align: left;
+}
+
+.btn a {
+    color: inherit;
+}
+
+.btn a:hover {
+    text-decoration: none;
+}
+
+.control-group {
+    margin-left: 10px;
+}
+
+.control-group p {
+    margin-left: -10px;
+}
+
 .row-fluid {
     
 }
@@ -109,7 +129,7 @@ h2 {
     /* color: #7799bb; */
     /* color: #bbbbaa; */
     color: #000000;
-    font-size: 1.3em;
+    font-size: 1.4em;
 }
 
 h3 {
@@ -148,6 +168,18 @@ label {
 
 form {
     margin-top: 10px;
+}
+
+li button {
+    width: 148px;
+}
+
+li button {
+    text-align: left;
+}
+
+button a {
+    display: block;
 }
 
 /* End General HTML */
@@ -190,9 +222,9 @@ form {
 }
 
 .token-value {
-    margin: 30px 0 30px 20px;
-    font-size: 2em;
+    margin: 10px 0 20px 20px;
     font-family: monospace;
+    font-size: 2em;
 }
 
 .options-list {
